[0.2.7.0 - Beta	   xx/July/2008]
+ added support for Enhanced Video Renderer

[0.2.6.0 - Beta    22/June/2008]
+ fixed bug with bad offset of VIDEOINFOHEADER2 extradata
+ added support for VFW property pages
+ added support for IAMVideoCompression interface

[0.2.5.0 - Beta	   17/June/2008]
+ added seeking dialog
+ added WAVEFORMATEXTENSIBLE parsing
+ added additional extradata parsing after VIDEOINFOHEADER & VIDEOINFOHEADER2
+ added some new GUIDs
+ added new event scheduling dialog
+ added support for schedule events via XML

[0.2.4.0 - Beta    11/May/2008]
+ added graph clock control and filter icons

[0.2.3.0 - Beta    27/Apr/2008]
+ added some more XML filter interfaces (mainly monogram filters)
+ added ALLOCATOR_PROPERTIES information for pin connection
+ added "Progress View" form
+ fixed a strange menu event problem
+ added volume & balance controls for filters exposing the IBasicAudio interface
+ MPEG1VIDEOINFO and MPEG2VIDEOINFO now displays sequence header data
+ added internal dump filter
+ added shortcuts to Null Renderer & Dump into the rightclick menu

[0.2.2.0 - Beta    24/Mar/2008]
+ added frame-step button
+ values in property pages can now be selected and put into clipboard
+ added key shortcuts (ESC = stop, Space = Play/Pause toggle, Right arrow = frame step)
+ GraphStudio now displays list of available media types for unconnected pins
+ GraphStudio can accept a filename to open via command line
+ added graph refresh feature (Ctrl+F5)
+ added AAC format parser

[0.2.1.0 - Beta	   15/Mar/2008]
+ more drawing fixes
+ added some more extensions into opendialog filters
+ added registered pin details and media types
+ added MPEG1VIDEOINFO and MPEG2VIDEOINFO structure details
+ property-tree integrated with the filters form
+ remote-graph bugfix (thanks to Christian Steindl)
+ Ctrl+G shortcut works also when connected to remote graph
+ added Render URL feature
+ added DirectConnect toggle
+ ActiveMovie Window now also contains filter name in the title