@@ -69,7 +69,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="strmbasdu.lib strmiids.lib winmm.lib mfuuid.lib"
+				AdditionalDependencies="strmbasdu.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -153,7 +153,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="strmbaseus.lib strmiids.lib winmm.lib mfuuid.lib"
+				AdditionalDependencies="strmbaseus.lib strmiids.lib winmm.lib mfuuid.lib msdmo.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
