@@ -1,5 +1,6 @@
 [0.2.7.0 - Beta	   xx/July/2008]
 + added support for Enhanced Video Renderer
++ added support for DMO objects (but it's not possible to duplicate "CTRL-D" a DMO filter once created)
 
 [0.2.6.0 - Beta    22/June/2008]
 + fixed bug with bad offset of VIDEOINFOHEADER2 extradata
